--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,10 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>stream-api</module>
+        <module>stream</module>
         <module>jdbc</module>
+        <module>core</module>
+        <module>collection</module>
     </modules>
 
     <dependencies>
