--- a/stream/pom.xml
+++ b/stream/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>stream-api</artifactId>
+    <artifactId>stream</artifactId>
     <build>
         <plugins>
             <plugin>
