--- a/postgresql/pom.xml
+++ b/postgresql/pom.xml
@@ -7,9 +7,9 @@
         <groupId>kovteba</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>collection</artifactId>
-
+    <artifactId>postgresql</artifactId>
 
 </project>
