--- a/internationalization/src/main/webapp/WEB-INF/web.xml
+++ b/internationalization/src/main/webapp/WEB-INF/web.xml
@@ -11,16 +11,16 @@
     
     <servlet-mapping>
         <servlet-name>index</servlet-name>
-        <url-pattern>/</url-pattern>
+        <url-pattern></url-pattern>
     </servlet-mapping>
 
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 
-    <servlet-mapping>
-        <servlet-name>default</servlet-name>
-        <url-pattern>/templates/*</url-pattern>
-    </servlet-mapping>
+<!--    <servlet-mapping>-->
+<!--        <servlet-name>default</servlet-name>-->
+<!--        <url-pattern>/templates/*</url-pattern>-->
+<!--    </servlet-mapping>-->
 
 </web-app>
