--- a/internationalization/src/main/webapp/WEB-INF/web.xml
+++ b/internationalization/src/main/webapp/WEB-INF/web.xml
@@ -7,16 +7,31 @@
     <servlet>
         <servlet-name>index</servlet-name>
         <servlet-class>kovteba.jspservlet.controller.WelcomeServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
     </servlet>
-    
+
     <servlet-mapping>
         <servlet-name>index</servlet-name>
         <url-pattern></url-pattern>
     </servlet-mapping>
 
-    <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
-    </welcome-file-list>
+
+<!--    <welcome-file-list>-->
+<!--        <welcome-file>index.jsp</welcome-file>-->
+<!--    </welcome-file-list>-->
+
+
+
+
+
+
+
+
+
+
+<!--    <session-config>-->
+<!--        <session-timeout>20</session-timeout>-->
+<!--    </session-config>-->
 
 <!--    <servlet-mapping>-->
 <!--        <servlet-name>default</servlet-name>-->
