--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>postgresql</module>
         <module>servlet</module>
         <module>internationalization</module>
+        <module>algorithms</module>
     </modules>
 
     <build>
