--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
         <module>servlet</module>
         <module>internationalization</module>
         <module>algorithms</module>
+        <module>concurrency</module>
+        <module>design-patterns</module>
     </modules>
 
     <build>
