--- a/internationalization/pom.xml
+++ b/internationalization/pom.xml
@@ -15,7 +15,7 @@
     <artifactId>internationalization</artifactId>
 
     <properties>
-        <servlet.version>3.1.0</servlet.version>
+        <kovteba.servlet.version>3.1.0</kovteba.servlet.version>
         <jstl.version>1.2</jstl.version>
         <maven.compiler.source>12</maven.compiler.source>
         <maven.compiler.target>12</maven.compiler.target>
@@ -52,15 +52,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>${servlet.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
             <groupId>jstl</groupId>
             <artifactId>jstl</artifactId>
             <version>${jstl.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
         </dependency>
     </dependencies>
 
