--- a/data-base/pom.xml
+++ b/data-base/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>relational-db</artifactId>
+    <artifactId>data-base</artifactId>
 
 
 </project>
