--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>java-persistence-api</module>
         <module>examples</module>
         <module>javascript</module>
+        <module>data-base</module>
     </modules>
 
     <build>
