--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
         <module>javascript</module>
         <module>data-base</module>
         <module>linux</module>
+        <module>git</module>
+        <module>intellijidea</module>
     </modules>
 
     <build>
