--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>intellijidea</module>
         <module>maven</module>
         <module>spring</module>
+        <module>software-testing</module>
     </modules>
 
     <build>
