--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,9 @@
         <module>spring</module>
         <module>software-testing</module>
         <module>lombok</module>
+        <module>mockito</module>
+        <module>junit</module>
+        <module>dictionary</module>
     </modules>
 
     <build>
